@@ -19,12 +19,23 @@
  <kdevscriptproject>
   <general>
 		<includepatterns>*.rb</includepatterns>
+		<includepatterns>*.rhtml</includepatterns>
+		<includepatterns>*.rxml</includepatterns>
+		<includepatterns>*.css</includepatterns>
+		<includepatterns>*.js</includepatterns>
 		<excludepatterns>*~</excludepatterns>
   </general>
  </kdevscriptproject>
  <kdevfileview>
 	 <groups>
 	   <group pattern="*.rb" name="Scripts" />
+	   <group pattern="*.css" name="StyleSheets" />
+	   <group pattern="*.js" name="JavaScripts" />
+	   <group pattern="*.rhtml" name="Views" />
+	   <group pattern="*.rxml" name="BuilderTemplates" />
+	   <group pattern="*.yml" name="Config" />
+	   <group pattern="*.gif,*.jpg,*.png,*.ico" name="Images" />
+	   <group pattern="*.html,*.cgi,*.fcgi,*.txt" name="Public" />
 	 </groups>
  </kdevfileview>											 
  <kdevdoctreeview>
@@ -78,6 +89,10 @@
   <kdevfilecreate>
     <useglobaltypes>
 			<type ext="rb"/>
+			<type ext="rhtml"/>
+			<type ext="rxml"/>
+			<type ext="css"/>
+			<type ext="js"/>
     </useglobaltypes>
   </kdevfilecreate>
 	<kdevrubysupport>
