@@ -1,0 +1,11 @@
+//
+// C++ Implementation: $MODULE$
+//
+// Description: 
+//
+//
+// Author: $AUTHOR$ <$EMAIL$>, (C) $YEAR$
+//
+// Copyright: See COPYING file that comes with this distribution
+//
+//
