@@ -1,0 +1,4 @@
+<!--    Copyright (C) $YEAR$ by $AUTHOR$ -->
+<!--    <$EMAIL$> -->
+
+<!-- Copyright: See COPYING file that comes with this distribution -->
